infra-tools/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: "server.pharmetrade.com"
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 80
            path: "/"
  tls:
    - hosts:
      - server.pharmetrade.com
      secretName: server.pharmetrade.com-tls
